parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declarativas lista_funciones
Rule 2     lista_declarativas -> declarativa
Rule 3     lista_declarativas -> declarativa lista_declarativas
Rule 4     declarativa -> inclusion
Rule 5     inclusion -> INCLUIR BIBLIOTECA
Rule 6     lista_funciones -> definicion_funcion
Rule 7     lista_funciones -> definicion_funcion lista_funciones
Rule 8     definicion_funcion -> funcion_principal
Rule 9     definicion_funcion -> funcion_general
Rule 10    funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
Rule 11    funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 12    funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
Rule 13    funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 14    lista_parametros -> parametro COMA lista_parametros
Rule 15    lista_parametros -> parametro
Rule 16    lista_parametros -> VACIO
Rule 17    parametro -> tipo IDENTIFICADOR
Rule 18    parametro -> tipo IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER
Rule 19    bloque -> LLAVE_IZQ lista_instrucciones LLAVE_DER
Rule 20    bloque -> LLAVE_IZQ LLAVE_DER
Rule 21    lista_instrucciones -> instruccion
Rule 22    lista_instrucciones -> instruccion lista_instrucciones
Rule 23    instruccion -> declaracion
Rule 24    instruccion -> sentencia
Rule 25    instruccion -> estructura_de_control
Rule 26    declaracion -> declaracion_variable PUNTO_Y_COMA
Rule 27    declaracion_variable -> tipo lista_identificadores
Rule 28    lista_identificadores -> IDENTIFICADOR
Rule 29    lista_identificadores -> IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER ASIGNACION elementos_array
Rule 30    lista_identificadores -> IDENTIFICADOR ASIGNACION expresion
Rule 31    lista_identificadores -> IDENTIFICADOR COMA lista_identificadores
Rule 32    lista_identificadores -> IDENTIFICADOR ASIGNACION expresion COMA lista_identificadores
Rule 33    elementos_array -> LLAVE_IZQ lista_valores LLAVE_DER
Rule 34    lista_valores -> NUMERO
Rule 35    lista_valores -> NUMERO COMA lista_valores
Rule 36    sentencia -> asignacion PUNTO_Y_COMA
Rule 37    sentencia -> llamado_a_funcion PUNTO_Y_COMA
Rule 38    sentencia -> retorno PUNTO_Y_COMA
Rule 39    asignacion -> IDENTIFICADOR ASIGNACION expresion
Rule 40    asignacion -> IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER ASIGNACION expresion
Rule 41    asignacion -> IDENTIFICADOR INCREMENTO
Rule 42    condicion -> expresion MENOR_QUE expresion
Rule 43    condicion -> expresion MAYOR_QUE expresion
Rule 44    tipo -> ENTERO
Rule 45    tipo -> VACIO
Rule 46    expresion -> expresion SUMA expresion
Rule 47    expresion -> expresion RESTA expresion
Rule 48    expresion -> expresion PRODUCTO expresion
Rule 49    expresion -> expresion DIVISION expresion
Rule 50    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 51    expresion -> TAMANIO_DE PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 52    expresion -> NUMERO
Rule 53    expresion -> IDENTIFICADOR
Rule 54    expresion -> IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER
Rule 55    expresion -> llamado_a_funcion
Rule 56    llamado_a_funcion -> IDENTIFICADOR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
Rule 57    llamado_a_funcion -> IMPRIMIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
Rule 58    lista_argumentos -> argumento COMA lista_argumentos
Rule 59    lista_argumentos -> argumento
Rule 60    lista_argumentos -> VACIO
Rule 61    argumento -> expresion
Rule 62    argumento -> CADENA
Rule 63    retorno -> RETORNAR expresion
Rule 64    retorno -> RETORNAR
Rule 65    estructura_de_control -> seleccion
Rule 66    estructura_de_control -> iteracion
Rule 67    seleccion -> SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque
Rule 68    iteracion -> PARA PARENTESIS_IZQ declaracion_variable PUNTO_Y_COMA condicion PUNTO_Y_COMA asignacion PARENTESIS_DER bloque

Terminals, with rules where they appear

ASIGNACION           : 29 30 32 39 40
BIBLIOTECA           : 5
CADENA               : 62
COMA                 : 14 31 32 35 58
CORCHETE_DER         : 18 29 40 54
CORCHETE_IZQ         : 18 29 40 54
DIVISION             : 49
ENTERO               : 10 11 44
IDENTIFICADOR        : 12 13 17 18 28 29 30 31 32 39 40 41 53 54 56
IMPRIMIR             : 57
INCLUIR              : 5
INCREMENTO           : 41
LLAVE_DER            : 19 20 33
LLAVE_IZQ            : 19 20 33
MAYOR_QUE            : 43
MENOR_QUE            : 42
NUMERO               : 34 35 52
PARA                 : 68
PARENTESIS_DER       : 10 11 12 13 50 51 56 57 67 68
PARENTESIS_IZQ       : 10 11 12 13 50 51 56 57 67 68
PRINCIPAL            : 10 11
PRODUCTO             : 48
PUNTO_Y_COMA         : 26 36 37 38 68 68
RESTA                : 47
RETORNAR             : 63 64
SI                   : 67
SUMA                 : 46
TAMANIO_DE           : 51
VACIO                : 16 45 60
error                : 

Nonterminals, with rules where they appear

argumento            : 58 59
asignacion           : 36 68
bloque               : 10 11 12 13 67 68
condicion            : 67 68
declaracion          : 23
declaracion_variable : 26 68
declarativa          : 2 3
definicion_funcion   : 6 7
elementos_array      : 29
estructura_de_control : 25
expresion            : 30 32 39 40 40 42 42 43 43 46 46 47 47 48 48 49 49 50 51 54 61 63
funcion_general      : 9
funcion_principal    : 8
inclusion            : 4
instruccion          : 21 22
iteracion            : 66
lista_argumentos     : 56 57 58
lista_declarativas   : 1 3
lista_funciones      : 1 7
lista_identificadores : 27 31 32
lista_instrucciones  : 19 22
lista_parametros     : 10 12 14
lista_valores        : 33 35
llamado_a_funcion    : 37 55
parametro            : 14 15
programa             : 0
retorno              : 38
seleccion            : 65
sentencia            : 24
tipo                 : 12 13 17 18 27

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declarativas lista_funciones
    (2) lista_declarativas -> . declarativa
    (3) lista_declarativas -> . declarativa lista_declarativas
    (4) declarativa -> . inclusion
    (5) inclusion -> . INCLUIR BIBLIOTECA

    INCLUIR         shift and go to state 5

    programa                       shift and go to state 1
    lista_declarativas             shift and go to state 2
    declarativa                    shift and go to state 3
    inclusion                      shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declarativas . lista_funciones
    (6) lista_funciones -> . definicion_funcion
    (7) lista_funciones -> . definicion_funcion lista_funciones
    (8) definicion_funcion -> . funcion_principal
    (9) definicion_funcion -> . funcion_general
    (10) funcion_principal -> . ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (11) funcion_principal -> . ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
    (12) funcion_general -> . tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (13) funcion_general -> . tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    ENTERO          shift and go to state 10
    VACIO           shift and go to state 12

    lista_funciones                shift and go to state 6
    definicion_funcion             shift and go to state 7
    funcion_principal              shift and go to state 8
    funcion_general                shift and go to state 9
    tipo                           shift and go to state 11

state 3

    (2) lista_declarativas -> declarativa .
    (3) lista_declarativas -> declarativa . lista_declarativas
    (2) lista_declarativas -> . declarativa
    (3) lista_declarativas -> . declarativa lista_declarativas
    (4) declarativa -> . inclusion
    (5) inclusion -> . INCLUIR BIBLIOTECA

    ENTERO          reduce using rule 2 (lista_declarativas -> declarativa .)
    VACIO           reduce using rule 2 (lista_declarativas -> declarativa .)
    INCLUIR         shift and go to state 5

    declarativa                    shift and go to state 3
    lista_declarativas             shift and go to state 13
    inclusion                      shift and go to state 4

state 4

    (4) declarativa -> inclusion .

    INCLUIR         reduce using rule 4 (declarativa -> inclusion .)
    ENTERO          reduce using rule 4 (declarativa -> inclusion .)
    VACIO           reduce using rule 4 (declarativa -> inclusion .)


state 5

    (5) inclusion -> INCLUIR . BIBLIOTECA

    BIBLIOTECA      shift and go to state 14


state 6

    (1) programa -> lista_declarativas lista_funciones .

    $end            reduce using rule 1 (programa -> lista_declarativas lista_funciones .)


state 7

    (6) lista_funciones -> definicion_funcion .
    (7) lista_funciones -> definicion_funcion . lista_funciones
    (6) lista_funciones -> . definicion_funcion
    (7) lista_funciones -> . definicion_funcion lista_funciones
    (8) definicion_funcion -> . funcion_principal
    (9) definicion_funcion -> . funcion_general
    (10) funcion_principal -> . ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (11) funcion_principal -> . ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
    (12) funcion_general -> . tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (13) funcion_general -> . tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    $end            reduce using rule 6 (lista_funciones -> definicion_funcion .)
    ENTERO          shift and go to state 10
    VACIO           shift and go to state 12

    definicion_funcion             shift and go to state 7
    lista_funciones                shift and go to state 15
    funcion_principal              shift and go to state 8
    funcion_general                shift and go to state 9
    tipo                           shift and go to state 11

state 8

    (8) definicion_funcion -> funcion_principal .

    ENTERO          reduce using rule 8 (definicion_funcion -> funcion_principal .)
    VACIO           reduce using rule 8 (definicion_funcion -> funcion_principal .)
    $end            reduce using rule 8 (definicion_funcion -> funcion_principal .)


state 9

    (9) definicion_funcion -> funcion_general .

    ENTERO          reduce using rule 9 (definicion_funcion -> funcion_general .)
    VACIO           reduce using rule 9 (definicion_funcion -> funcion_general .)
    $end            reduce using rule 9 (definicion_funcion -> funcion_general .)


state 10

    (10) funcion_principal -> ENTERO . PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (11) funcion_principal -> ENTERO . PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
    (44) tipo -> ENTERO .

    PRINCIPAL       shift and go to state 16
    IDENTIFICADOR   reduce using rule 44 (tipo -> ENTERO .)


state 11

    (12) funcion_general -> tipo . IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (13) funcion_general -> tipo . IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque

    IDENTIFICADOR   shift and go to state 17


state 12

    (45) tipo -> VACIO .

    IDENTIFICADOR   reduce using rule 45 (tipo -> VACIO .)


state 13

    (3) lista_declarativas -> declarativa lista_declarativas .

    ENTERO          reduce using rule 3 (lista_declarativas -> declarativa lista_declarativas .)
    VACIO           reduce using rule 3 (lista_declarativas -> declarativa lista_declarativas .)


state 14

    (5) inclusion -> INCLUIR BIBLIOTECA .

    INCLUIR         reduce using rule 5 (inclusion -> INCLUIR BIBLIOTECA .)
    ENTERO          reduce using rule 5 (inclusion -> INCLUIR BIBLIOTECA .)
    VACIO           reduce using rule 5 (inclusion -> INCLUIR BIBLIOTECA .)


state 15

    (7) lista_funciones -> definicion_funcion lista_funciones .

    $end            reduce using rule 7 (lista_funciones -> definicion_funcion lista_funciones .)


state 16

    (10) funcion_principal -> ENTERO PRINCIPAL . PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (11) funcion_principal -> ENTERO PRINCIPAL . PARENTESIS_IZQ PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 18


state 17

    (12) funcion_general -> tipo IDENTIFICADOR . PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (13) funcion_general -> tipo IDENTIFICADOR . PARENTESIS_IZQ PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 19


state 18

    (10) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ . lista_parametros PARENTESIS_DER bloque
    (11) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ . PARENTESIS_DER bloque
    (14) lista_parametros -> . parametro COMA lista_parametros
    (15) lista_parametros -> . parametro
    (16) lista_parametros -> . VACIO
    (17) parametro -> . tipo IDENTIFICADOR
    (18) parametro -> . tipo IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    PARENTESIS_DER  shift and go to state 22
    VACIO           shift and go to state 24
    ENTERO          shift and go to state 20

    lista_parametros               shift and go to state 21
    parametro                      shift and go to state 23
    tipo                           shift and go to state 25

state 19

    (12) funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ . lista_parametros PARENTESIS_DER bloque
    (13) funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ . PARENTESIS_DER bloque
    (14) lista_parametros -> . parametro COMA lista_parametros
    (15) lista_parametros -> . parametro
    (16) lista_parametros -> . VACIO
    (17) parametro -> . tipo IDENTIFICADOR
    (18) parametro -> . tipo IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    PARENTESIS_DER  shift and go to state 27
    VACIO           shift and go to state 24
    ENTERO          shift and go to state 20

    tipo                           shift and go to state 25
    lista_parametros               shift and go to state 26
    parametro                      shift and go to state 23

state 20

    (44) tipo -> ENTERO .

    IDENTIFICADOR   reduce using rule 44 (tipo -> ENTERO .)


state 21

    (10) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros . PARENTESIS_DER bloque

    PARENTESIS_DER  shift and go to state 28


state 22

    (11) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER . bloque
    (19) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (20) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 30

    bloque                         shift and go to state 29

state 23

    (14) lista_parametros -> parametro . COMA lista_parametros
    (15) lista_parametros -> parametro .

    COMA            shift and go to state 31
    PARENTESIS_DER  reduce using rule 15 (lista_parametros -> parametro .)


state 24

    (16) lista_parametros -> VACIO .
    (45) tipo -> VACIO .

    PARENTESIS_DER  reduce using rule 16 (lista_parametros -> VACIO .)
    IDENTIFICADOR   reduce using rule 45 (tipo -> VACIO .)


state 25

    (17) parametro -> tipo . IDENTIFICADOR
    (18) parametro -> tipo . IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER

    IDENTIFICADOR   shift and go to state 32


state 26

    (12) funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros . PARENTESIS_DER bloque

    PARENTESIS_DER  shift and go to state 33


state 27

    (13) funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER . bloque
    (19) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (20) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 30

    bloque                         shift and go to state 34

state 28

    (10) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER . bloque
    (19) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (20) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 30

    bloque                         shift and go to state 35

state 29

    (11) funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .

    ENTERO          reduce using rule 11 (funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .)
    VACIO           reduce using rule 11 (funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .)
    $end            reduce using rule 11 (funcion_principal -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .)


state 30

    (19) bloque -> LLAVE_IZQ . lista_instrucciones LLAVE_DER
    (20) bloque -> LLAVE_IZQ . LLAVE_DER
    (21) lista_instrucciones -> . instruccion
    (22) lista_instrucciones -> . instruccion lista_instrucciones
    (23) instruccion -> . declaracion
    (24) instruccion -> . sentencia
    (25) instruccion -> . estructura_de_control
    (26) declaracion -> . declaracion_variable PUNTO_Y_COMA
    (36) sentencia -> . asignacion PUNTO_Y_COMA
    (37) sentencia -> . llamado_a_funcion PUNTO_Y_COMA
    (38) sentencia -> . retorno PUNTO_Y_COMA
    (65) estructura_de_control -> . seleccion
    (66) estructura_de_control -> . iteracion
    (27) declaracion_variable -> . tipo lista_identificadores
    (39) asignacion -> . IDENTIFICADOR ASIGNACION expresion
    (40) asignacion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER ASIGNACION expresion
    (41) asignacion -> . IDENTIFICADOR INCREMENTO
    (56) llamado_a_funcion -> . IDENTIFICADOR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
    (57) llamado_a_funcion -> . IMPRIMIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
    (63) retorno -> . RETORNAR expresion
    (64) retorno -> . RETORNAR
    (67) seleccion -> . SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque
    (68) iteracion -> . PARA PARENTESIS_IZQ declaracion_variable PUNTO_Y_COMA condicion PUNTO_Y_COMA asignacion PARENTESIS_DER bloque
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    LLAVE_DER       shift and go to state 37
    IDENTIFICADOR   shift and go to state 49
    IMPRIMIR        shift and go to state 50
    RETORNAR        shift and go to state 51
    SI              shift and go to state 52
    PARA            shift and go to state 53
    ENTERO          shift and go to state 20
    VACIO           shift and go to state 12

    lista_instrucciones            shift and go to state 36
    instruccion                    shift and go to state 38
    declaracion                    shift and go to state 39
    sentencia                      shift and go to state 40
    estructura_de_control          shift and go to state 41
    declaracion_variable           shift and go to state 42
    asignacion                     shift and go to state 43
    llamado_a_funcion              shift and go to state 44
    retorno                        shift and go to state 45
    seleccion                      shift and go to state 46
    iteracion                      shift and go to state 47
    tipo                           shift and go to state 48

state 31

    (14) lista_parametros -> parametro COMA . lista_parametros
    (14) lista_parametros -> . parametro COMA lista_parametros
    (15) lista_parametros -> . parametro
    (16) lista_parametros -> . VACIO
    (17) parametro -> . tipo IDENTIFICADOR
    (18) parametro -> . tipo IDENTIFICADOR CORCHETE_IZQ CORCHETE_DER
    (44) tipo -> . ENTERO
    (45) tipo -> . VACIO

    VACIO           shift and go to state 24
    ENTERO          shift and go to state 20

    parametro                      shift and go to state 23
    lista_parametros               shift and go to state 54
    tipo                           shift and go to state 25

state 32

    (17) parametro -> tipo IDENTIFICADOR .
    (18) parametro -> tipo IDENTIFICADOR . CORCHETE_IZQ CORCHETE_DER

    COMA            reduce using rule 17 (parametro -> tipo IDENTIFICADOR .)
    PARENTESIS_DER  reduce using rule 17 (parametro -> tipo IDENTIFICADOR .)
    CORCHETE_IZQ    shift and go to state 55


state 33

    (12) funcion_general -> tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER . bloque
    (19) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (20) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 30
